# 46120-PiWE

./: README.md
tutorials_scientific_python/: 1-introduction_to_jupyter_notebooks.ipynb  2a-tutorial_numpy_array_basics.ipynb  2b-exercise_numpy.ipynb  3a-tutorial_matplotlib_basics.ipynb  3b-exercise_matplotlib.ipynb  4a-tutorial_pandas.ipynb  4b-exercise_pandas.ipynb
tutorials_scientific_python/data/: demo_risoe_data_means.csv  demo_risoe_data_stdvs.csv
week00_prep/: README.md  week00_prep_answers.py  welcome_to_python.ipynb
week01_intro_git/: README.md
week02_functions_tests/: README.md
week02_functions_tests/demo-testing/: arithmetic.py  test_arithmetic.py  test_arithmetic_extras.py
week03_turbie/: README.md
week04_function_handles/: README.md  demo_fsolve.py
week05_environments_diagrams/: README.md
week06_codecamp_presentations/: README.md  demo-eval-for-teams.xlsx
week07_linters_packaging/: README.md  pyproject.toml
week08_final_project_intro/: README.md
week08_final_project_intro/wind_power_forecasting/: README.md
week08_final_project_intro/wind_power_forecasting/inputs/: readme.txt
week08_final_project_intro/wind_resource_assessment/: README.md
week08_final_project_intro/wind_resource_assessment/inputs/: 1997-1999.nc  2000-2002.nc  2003-2005.nc  2006-2008.nc  2009-2011.nc  2012-2014.nc  2015-2017.nc  2018-2020.nc  2021-2023.nc
week08_final_project_intro/wind_turbine_modeling/: README.md
week09_classes_inheritance_and_OOP/: README.md
week10_computational_thinking_and_design_of_architecture/: README.md
